--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
 
 h1 {
     font-size: 34px;
+    text-align: center;
 }
 
 .switch {
@@ -75,4 +76,5 @@ h1 {
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
     background-color: #ccffff;
+    text-align: center;
 }
